# optionxray

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: quickstart.py
optionxray/: __init__.py  bs.py  greeks.py  instruments.py  iv.py  report.py  scenarios.py  xray.py
tests/: test_bs.py  test_iv.py  test_scenarios.py
