[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optionxray"
version = "0.1.0"
description = "Option pricing and explanation engine with Black-Scholes analytics"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "OptionXRay Contributors"}
]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scipy>=1.9"
]

[project.urls]
Homepage = "https://example.com/optionxray"
Repository = "https://example.com/optionxray"

[tool.setuptools.packages.find]
where = ["."]
include = ["optionxray*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
