[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optionxray"
version = "0.1.0"
description = "Option pricing and explanation engine with Black-Scholes analytics"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["options", "derivatives", "black-scholes", "greeks", "finance"]
authors = [
  {name = "OptionXRay Contributors"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scipy>=1.9"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/optionxray/optionxray"
Repository = "https://github.com/optionxray/optionxray"
Issues = "https://github.com/optionxray/optionxray/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["optionxray*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
